--- a/test/testdata/k8s/file-server.yaml
+++ b/test/testdata/k8s/file-server.yaml
@@ -41,7 +41,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:1.20.1-alpine
+          image: nginx:1.21.1
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 80
@@ -52,21 +52,3 @@ spec:
         - name: files
           hostPath:
             path: /
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: file-server
-  namespace: dragonfly-e2e
-spec:
-  rules:
-    - http:
-        paths:
-          - pathType: Prefix
-            path: "/file-server"
-            backend:
-              service:
-                name: file-server
-                port:
-                  number: 80
