--- a/test/testdata/k8s/file-server.yaml
+++ b/test/testdata/k8s/file-server.yaml
@@ -41,7 +41,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.21.1-alpine
+        image: d7y.io/library/nginx:1.21.1-alpine
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 80
