--- a/test/testdata/k8s/file-server.yaml
+++ b/test/testdata/k8s/file-server.yaml
@@ -4,7 +4,6 @@ metadata:
   name: dragonfly-e2e
 
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,7 +21,6 @@ spec:
     targetPort: 80
 
 ---
-
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -43,7 +41,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.20.1-alpine
+        image: d7y.io/library/nginx:1.21.1-alpine
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 80
