feature: update multiple registries support docs
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/charts/dragonfly/values.yaml
+++ b/deploy/charts/dragonfly/values.yaml
@@ -181,6 +181,7 @@ dfdaemon:
         # port in configmap is generated from $.Values.dfdaemon.hostPort
         # port: 65001
       registryMirror:
+        dynamic: true
         url: https://index.docker.io
       proxies:
       - regx: blobs/sha256.*
