--- a/manager/config/testdata/manager.yaml
+++ b/manager/config/testdata/manager.yaml
@@ -18,7 +18,9 @@ database:
     password: bar
     host: bar
     port: 6379
-    db: 0
+    cacheDB: 0
+    brokerDB: 1
+    backendDB: 2
 
 cache:
   redis:
