--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -39,3 +39,10 @@ manager:
 host:
   idc: foo
   location: bar
+
+redis:
+  host: "127.0.0.1"
+  port: 6379
+  password: "password"
+  brokerDB: 1
+  backendDB: 2
