--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -40,9 +40,13 @@ host:
   idc: foo
   location: bar
 
-redis:
-  host: "127.0.0.1"
-  port: 6379
-  password: "password"
-  brokerDB: 1
-  backendDB: 2
+task:
+  globalWorkerNum: 1
+  schedulerWorkerNum: 1
+  localWorkerNum: 5
+  redis:
+    host: "127.0.0.1"
+    port: 6379
+    password: "password"
+    brokerDB: 1
+    backendDB: 2
