feat: manager charts
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/charts/dragonfly-manager/templates/cdn/cdn-configmap.yaml
+++ b/deploy/charts/dragonfly-manager/templates/cdn/cdn-configmap.yaml
@@ -22,7 +22,13 @@ data:
       gcStorageInterval: {{ .Values.cdn.config.base.gcStorageInterval }}
       taskExpireTime: {{ .Values.cdn.config.base.taskExpireTime }}
       storagePattern: {{ .Values.cdn.config.base.storagePattern }}
+      manager:
+        addr: {{ template "dragonfly.manager.fullname" . }}:{{ .Values.manager.restPort }}
+        schedulerClusterID: {{ .Values.cdn.config.manager.cdnClusterID }}
+        keepAlive: 
+{{ toYaml .Values.cdn.config.manager.keepAlive | indent 10 }}
       console: {{ .Values.cdn.config.base.console }}
+
     plugins:
 {{ toYaml .Values.cdn.config.plugins | indent 6 }}
   nginx.conf: |-
