--- a/deploy/charts/dragonfly-manager/Chart.yaml
+++ b/deploy/charts/dragonfly-manager/Chart.yaml
@@ -12,3 +12,13 @@ keywords:
 home: https://d7y.io/
 sources:
 - https://github.com/dragonflyoss/Dragonfly2
+
+dependencies:
+- name: mysql
+  version: "8.0.0"
+  repository: "https://charts.bitnami.com/bitnami"
+  condition: mysql.enable
+- name: redis-cluster
+  version: "5.0.0"
+  repository: "https://charts.bitnami.com/bitnami"
+  condition: redis.enable
