--- a/deploy/charts/dragonfly-manager/values.yaml
+++ b/deploy/charts/dragonfly-manager/values.yaml
@@ -39,15 +39,21 @@ scheduler:
     port: 8002
     targetPort: 8002
   config:
-    # when there is no manager component in or out of cluster, enable staticCDN
-    # cdn will auto register in configmap, and scheduler will discover all of them dynamic.
-    staticCDN: true
     debug: false
     worker:
       workerNum: 4
       workerJobPoolSize: 10000
       senderNum: 10
       senderJobPoolSize: 10000
+    dynconfig:
+      type: manager
+    manager:
+      schedulerClusterID: 0
+      keepAlive:
+        interval: 5s
+        retryMaxAttempts: 100000000
+        retryInitBackOff: 5
+        retryMaxBackOff: 10
 
 cdn:
   name: cdn
@@ -56,7 +62,6 @@ cdn:
   replicas: 3
   image: dragonflyoss/cdn
   tag: v0.1.0-beta
-  kubectlImage: bitnami/kubectl
   pullPolicy: Always
   resources:
     requests:
@@ -85,26 +90,33 @@ cdn:
       gcStorageInterval: 15s
       taskExpireTime: 3m
       storagePattern: disk
+      manager:
+        cdnClusterID: 0
+        keepAlive:
+          interval: 5s
+          retryMaxAttempts: 100000000
+          retryInitBackOff: 5
+          retryMaxBackOff: 10
       console: false
     plugins:
       storageDriver:
-      - name: disk
-        enable: true
-        config:
-          baseDir: /tmp/cdn
+        - name: disk
+          enable: true
+          config:
+            baseDir: /tmp/cdn
       storageManager:
-      - name: disk
-        enable: true
-        config:
-          gcInitialDelay: 5s
-          gcInterval: 15s
-          driverConfigs:
-            disk:
-              gcConfig:
-                youngGCThreshold: 100G
-                fullGCThreshold: 5G
-                cleanRatio: 1
-                intervalThreshold: 2h
+        - name: disk
+          enable: true
+          config:
+            gcInitialDelay: 5s
+            gcInterval: 15s
+            driverConfigs:
+              disk:
+                gcConfig:
+                  youngGCThreshold: 100G
+                  fullGCThreshold: 5G
+                  cleanRatio: 1
+                  intervalThreshold: 2h
 
 dfdaemon:
   name: dfdaemon
@@ -184,13 +196,42 @@ dfdaemon:
         dynamic: true
         url: https://index.docker.io
       proxies:
-      - regx: blobs/sha256.*
+        - regx: blobs/sha256.*
+
+manager:
+  name: manager
+  nameOverride: ""
+  fullnameOverride: ""
+  replicas: 4
+  image: dragonflyoss/manager
+  tag: v0.1.0-beta
+  pullPolicy: IfNotPresent
+  resources:
+    requests:
+      cpu: "0"
+      memory: "0"
+    limits:
+      cpu: "4"
+      memory: "8Gi"
+  priorityClassName: ""
+  nodeSelector: {}
+  terminationGracePeriodSeconds:
+  tolerations: []
+  podAnnotations: {}
+  podLabels: {}
+  serviceAnnotations: {}
+  statefulsetAnnotations: {}
+  restPort: 8080
+  grpcPort: 65003
 
 mysql:
+  enable: true
   auth:
     rootPassword: dragonfly-root
     username: dragonfly
     password: dragonfly
+    database: manager
 
 redis:
+  enable: true
   password: dragonfly
