--- a/deploy/charts/dragonfly-manager/templates/cdn/cdn-configmap.yaml
+++ b/deploy/charts/dragonfly-manager/templates/cdn/cdn-configmap.yaml
@@ -23,12 +23,11 @@ data:
       taskExpireTime: {{ .Values.cdn.config.base.taskExpireTime }}
       storagePattern: {{ .Values.cdn.config.base.storagePattern }}
       manager:
-        addr: {{ template "dragonfly.manager.fullname" . }}:{{ .Values.manager.restPort }}
+        addr: {{ template "dragonfly.manager.fullname" . }}:{{ .Values.manager.grpcPort }}
         schedulerClusterID: {{ .Values.cdn.config.base.manager.cdnClusterID }}
         keepAlive: 
 {{ toYaml .Values.cdn.config.base.manager.keepAlive | indent 10 }}
       console: {{ .Values.cdn.config.base.console }}
-
     plugins:
 {{ toYaml .Values.cdn.config.plugins | indent 6 }}
   nginx.conf: |-
