--- a/deploy/charts/dragonfly-manager/templates/manager/manager-deplyment.yaml
+++ b/deploy/charts/dragonfly-manager/templates/manager/manager-deplyment.yaml
@@ -52,6 +52,14 @@ spec:
       {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.Values.scheduler.priorityClassName) }}
       priorityClassName: {{ .Values.manager.priorityClassName }}
       {{- end }}
+      {{- if .Values.redis.enable }}
+      initContainers:
+      - name: wait-for-manager
+        image: alioygur/wait-for:latest
+        args:
+          - "-it"
+          - {{ .Release.Name }}-{{ default "redis-cluster" .Values.redis.fullnameOverride }}:{{ .Values.redis.service.port }}
+      {{- end }}
       containers:
       - name: manager
         image: "{{ .Values.manager.image }}:{{ .Values.manager.tag }}"
@@ -66,6 +74,19 @@ spec:
         volumeMounts:
         - name: config
           mountPath: "/etc/dragonfly"
+        readinessProbe:
+          httpGet:
+            path: /healthy
+            port: {{ .Values.manager.restPort }}
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /healthy
+            port: {{ .Values.manager.restPort }}
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          terminationGracePeriodSeconds: 60
       volumes:
       - name: config
         configMap:
