--- a/deploy/charts/dragonfly-manager/templates/scheduler/scheduler-configmap.yaml
+++ b/deploy/charts/dragonfly-manager/templates/scheduler/scheduler-configmap.yaml
@@ -18,7 +18,7 @@ data:
     dynconfig:
 {{ toYaml .Values.scheduler.config.dynconfig | indent 6 }}
     manager:
-      addr: {{ template "dragonfly.manager.fullname" . }}:{{ .Values.manager.restPort }}
+      addr: {{ template "dragonfly.manager.fullname" . }}:{{ .Values.manager.grpcPort }}
       schedulerClusterID: {{ .Values.scheduler.config.manager.schedulerClusterID }}
       keepAlive: 
 {{ toYaml .Values.scheduler.config.manager.keepAlive | indent 8 }}
