feat: manager sidecar
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/charts/dragonfly-manager/templates/manager/manager-configmap.yaml
+++ b/deploy/charts/dragonfly-manager/templates/manager/manager-configmap.yaml
@@ -28,6 +28,7 @@ data:
         {{- end }}
         port: {{ .Values.mysql.primary.service.port }}
         dbname: {{ .Values.mysql.auth.database }}
+        migrate: {{ .Values.mysql.migrate }}
       redis:
         password: {{ .Values.redis.password }}
         {{- if .Values.redis.enable }}
