chore: update dfget.yaml comment
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/docs/en/config/dfget.yaml
+++ b/docs/en/config/dfget.yaml
@@ -27,6 +27,8 @@ keepStorage: true
 scheduler:
   # schedule timeout
   scheduleTimeout: 30s
+  # when true, only scheduler says back source, daemon can back source
+  disableAutoBackSource: false
   # below example is a stand address
   netAddrs:
     - type: tcp
