chore: docker with submodules
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Get Version
         id: get_version
