--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           file: build/images/scheduler/Dockerfile
           labels: |-
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
@@ -82,6 +83,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           file: build/images/dfdaemon/Dockerfile
           labels: |-
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
@@ -124,6 +126,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           file: build/images/cdn/Dockerfile
           labels: |-
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
@@ -166,6 +169,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           file: build/images/manager/Dockerfile
           labels: |-
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
