feat: pull nginx image with dragonfly
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/test/testdata/k8s/file-server.yaml
+++ b/test/testdata/k8s/file-server.yaml
@@ -41,7 +41,8 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.21.1-alpine
+        # Pull image with dragonfly
+        image: d7y.io/library/nginx:1.21.1-alpine
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 80
