--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deploy/helm-charts"]
 	path = deploy/helm-charts
-	url = git@github.com:dragonflyoss/helm-charts.git
+	url = https://github.com/dragonflyoss/helm-charts.git
