--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -53,7 +53,32 @@ jobs:
           version: ${{ env.KIND_VERSION }}
           config: ./test/testdata/kind/config.yaml
 
-      - name: Run E2E tests
+      - name: Build images
+        run: make docker-build
+
+      - name: Kind load image
+        run: make kind-load
+          
+      - name: Helm install
+        run: helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/compatibility-config.yaml dragonfly deploy/helm-charts/charts/dragonfly
+
+      - name: Install file server 
+        run: |
+          kubectl apply -f test/testdata/k8s/file-server.yaml
+          kubectl wait --namespace dragonfly-e2e \
+          --for=condition=ready pod file-server-0 \
+          --timeout=2m
+
+      - name: Install ginkgo
+        run: go get github.com/onsi/ginkgo/ginkgo
+
+      - name: Run compatibility test 
+        run: make actions-e2e-test
+
+      - name: Helm upgrade
+        run: helm upgrade --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/config.yaml dragonfly deploy/helm-charts/charts/dragonfly
+
+      - name: Run E2E test 
         run: make actions-e2e-test-coverage
 
       - name: Upload coverage to Codecov
