--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -65,9 +65,7 @@ jobs:
       - name: Install file server 
         run: |
           kubectl apply -f test/testdata/k8s/file-server.yaml
-          kubectl wait --namespace dragonfly-e2e \
-          --for=condition=ready pod file-server-0 \
-          --timeout=10m
+          kubectl wait --namespace dragonfly-e2e --for=condition=ready pod file-server-0 --timeout=10m
 
       - name: Install ginkgo
         run: go get github.com/onsi/ginkgo/ginkgo
