--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -58,25 +58,26 @@ jobs:
 
       - name: Kind load image
         run: make kind-load
-          
+
       - name: Helm install
         run: helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/compatibility-config.yaml dragonfly deploy/helm-charts/charts/dragonfly
 
-      - name: Install file server 
+      - name: Install file server
         run: |
           kubectl apply -f test/testdata/k8s/file-server.yaml
+          kubectl get po --namespace dragonfly-e2e pod file-server-0
           kubectl wait --namespace dragonfly-e2e --for=condition=ready pod file-server-0 --timeout=10m
 
       - name: Install ginkgo
         run: go get github.com/onsi/ginkgo/ginkgo
 
-      - name: Run compatibility test 
+      - name: Run compatibility test
         run: make actions-e2e-test
 
       - name: Helm upgrade
         run: helm upgrade --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/config.yaml dragonfly deploy/helm-charts/charts/dragonfly
 
-      - name: Run E2E test 
+      - name: Run E2E test
         run: make actions-e2e-test-coverage
 
       - name: Upload coverage to Codecov
