--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -1,4 +1,4 @@
-name: E2E Test
+name: Compatibility E2E Test
 
 on:
   push:
@@ -60,7 +60,7 @@ jobs:
         run: make kind-load
 
       - name: Helm install
-        run: helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/config.yaml dragonfly deploy/helm-charts/charts/dragonfly
+        run: helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/compatibility-config.yaml dragonfly deploy/helm-charts/charts/dragonfly
 
       - name: Install file server
         run: |
@@ -71,8 +71,8 @@ jobs:
       - name: Install ginkgo
         run: go get github.com/onsi/ginkgo/ginkgo
 
-      - name: Run E2E test
-        run: make actions-e2e-test-coverage
+      - name: Run compatibility E2E test
+        run: make actions-e2e-test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
