--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Install file server
         run: |
           kubectl apply -f test/testdata/k8s/file-server.yaml
-          kubectl get po --namespace dragonfly-e2e pod file-server-0
-          kubectl wait --namespace dragonfly-e2e --for=condition=ready pod file-server-0 --timeout=10m
+          kubectl get po --namespace dragonfly-e2e file-server-0
+          kubectl wait --namespace dragonfly-e2e --for=condition=ready po file-server-0 --timeout=10m
 
       - name: Install ginkgo
         run: go get github.com/onsi/ginkgo/ginkgo
