--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Get dependencies
         run: |
           go mod vendor
+          go get github.com/onsi/ginkgo/ginkgo
           mkdir -p /tmp/artifact
 
       - name: Setup Kind
@@ -54,28 +55,24 @@ jobs:
           config: ./test/testdata/kind/config.yaml
 
       - name: Build images
-        run: make docker-build
-
-      - name: Kind load image
-        run: make kind-load
-
-      - name: Prepare stable dragonfly
         run: |
+          make docker-build-manager
+          make docker-build-cdn
+          make docker-build-scheduler
           docker pull dragonflyoss/dfdaemon:v0.4.0
+
+      - name: Prepare kind environment
+        run: |
+          make kind-load-manager
+          make kind-load-cdn
+          make kind-load-scheduler
           kind load docker-image dragonflyoss/dfdaemon:v0.4.0
 
-      - name: Helm install
-        run: helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/compatibility-config.yaml dragonfly deploy/helm-charts/charts/dragonfly
-
-      - name: Install file server
+      - name: Install dragonfly
         run: |
+          helm install --wait --timeout 10m --dependency-update --create-namespace --namespace dragonfly-system -f test/testdata/charts/compatibility-config.yaml dragonfly deploy/helm-charts/charts/dragonfly
           kubectl apply -f test/testdata/k8s/file-server.yaml
-          kubectl get po --namespace dragonfly-system
-          kubectl get po --namespace dragonfly-e2e
           kubectl wait po file-server-0 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
-
-      - name: Install ginkgo
-        run: go get github.com/onsi/ginkgo/ginkgo
 
       - name: Run compatibility E2E test
         run: make actions-e2e-test
